# Olena-Mirror

./: .gitignore  .oln.prcs_aux  AUTHORS  BUILD  ChangeLog  FAQ  INSTALL  ISSUES  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  bootstrap  bootstrap.sh  cleanup.sh  component.m4  configure  configure.ac  libtool  oln-version  oln-version.m4  oln.prj  prj
demo/: Makefile.am  Makefile.in  image.cc  morpholena.cc  test-reconstruction.cc  tour.cc
doc/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  doc.bib  doc.css  doxygen.css  mainpage.dox  modules_list.dox  olena_powered_program.dox  online_resources.dox
doc/demo/: Makefile.am  convol-gaussian.cc  image.cc  morpholena-base.cc  morpholena-fast-hats.cc  morpholena-gaussian.cc  morpholena-grad.cc  morpholena-hats.cc  morpholena-hit-miss.cc  morpholena-minima-imp.cc  morpholena-minima.cc  morpholena-opening-closing.cc  morpholena-ops.cc  morpholena-wshed-beucher.cc  morpholena-wshed.cc  morpholena.cc  test-reconstruction.cc  tour.cc
doc/dev/: Makefile.am  abstract.texi  biblio.texi  build.texi  conf.texi  design.texi  faq.texi  install.texi  oln-dev.texi  srctree-ac.texi  srctree-conf.texi  srctree-doc.texi  srctree-headers.texi  srctree-oln.texi  srctree-testsuite.texi  srctree-tools.texi  srctree-top.texi  srctree.texi  thanks.texi  upgrading.texi
doc/doc/: Makefile.am  Makefile.in  oln-dev.texi  oln-ref.tex  oln-ref.texi  ref-types.tex
doc/hierarchies/: implementation.dia  iter.dia  labels.dia  misc.dia  new_olena_model.dia  point.dia  structelt.dia
doc/img/: lena256.pgm
doc/ref/: Makefile.am  doxygen.config  doxygen.config.in  exdoc.config  exdoc.config.in  exdoc.mk  exdoc.mk.in  exdoc.pl  gen_filelists.sh  img_conv.pl  integre-ref.tex  oln-ref.tex  processing.tpl  ref-types.tex
doc/tpl/: processing.tpl
extatica/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap  config.guess  config.site  config.sub  configure.ac  configure.gnu  install-sh  libiberty.mk
extatica/config/: Makefile.am  erbx  warning.m4  xtc.m4
extatica/data/: Makefile.am  function.cc
extatica/libiberty/: .gitignore  Makefile.in  aclocal.m4  configure.ac  configure.gnu  local.mk
extatica/src/: Makefile.am  all_methods.erb.cc  all_methods.erb.hh  config.hh.in  data.cc  data.hh  data.hxx  extatica.hh  function.erb.cc  function.erb.hh  function_loader.cc  function_loader.hh  function_loader.rb  libiberty-fix.c  name_of.cc  name_of.hh  policy.cc  policy.hh  ruby_stream.cc  ruby_stream.hh
extatica/swig/: Makefile.am  mln.i  run.in  xtc.i  xtc_mln.i
extatica/test/: Makefile.am  test_containers.cc  test_damien.cc  test_function_loader.cc  test_methods.cc  test_milena.cc  test_var_and_val.cc
integre/: ChangeLog  Makefile.am  configure.ac
integre/m4/: integre.m4
integre/ntg/: Makefile.am  all.hh  basics.hh  behaviour.hh  bin.hh  builtins_properties.hh  cast.hh  color.hh  cplx.hh  cplx_representation.hh  cycle.hh  debug.hh  float.hh  global_ops.hh  global_ops_defs.hh  global_ops_traits.hh  hsi.hh  hsl.hh  hsv.hh  int.hh  int_s.hh  int_u.hh  interval.hh  makefile.src  nrgb.hh  optraits.hh  optraits_bin.hh  optraits_builtins.hh  optraits_builtins_bool.hh  optraits_builtins_float.hh  optraits_builtins_int.hh  optraits_cplx.hh  optraits_cycle.hh  optraits_int_s.hh  optraits_int_u.hh  optraits_range.hh  optraits_scalar.hh  optraits_scalar_defs.hh  optraits_vec.hh  predecls.hh  (+13 more)
integre/tests/: Makefile.am
metalic/: ChangeLog  Makefile.am  configure.ac
metalic/m4/: metalic.m4
metalic/mlc/: Makefile.am  array.hh  array1d.hh  array1d.hxx  array2d.hh  array2d.hxx  array3d.hh  array3d.hxx  arraynd.hh  bool.hh  cmp.hh  contract.hh  control.hh  is_a.hh  logic.hh  loop.hh  makefile.src  math.hh  objs.hh  optional.hh  type.hh  typeadj.hh  ucmp.hh  ufuncs.hh
metalic/tests/: Makefile.am
milena/: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac  headers.mk
milena/apps/: Makefile.am  data.hh.in
milena/build-aux/: extra-recursive-targets.mk  generate_dist_headers.sh  regen-recursive.mk  strip-lrde
milena/doc/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  examples-outputs.mk  examples.dox  examples.mk  figures.mk  gen-examples-outputs-mk  gen-split-examples-mk  outputs.mk  programs-examples.mk  ref-guide.tex  split-examples.mk  tutorial.tex
milena/m4/: autotroll.m4  oln-with-lib.m4
milena/mesh/: Makefile.am
milena/sandbox/: ChangeLog
milena/tests/: Makefile.am  data.hh.in  tests.mk
milena/tools/: Makefile.am  area_flooding.cc  tools.mk
olena/: ChangeLog  Makefile.am  TODO  configure.ac
olena/conf/: README  compilers.def  configure.ac  gen-scripts.sh  oln-config.shin
olena/config/: oln-local.m4  oln.m4
olena/img/: Makefile.am  black.pbm  face_se.pbm  lena1d.ppm  lena3d.ppm  lena_dark.pgm  neighbor9.pbm  se.pbm  se9_1d.pbm  se_1d.pbm  se_3d.pbm  test-cmap.pgm  white.pbm  wrong_3d.pbm
olena/m4/: cxx.m4  integre.m4  metalic.m4  olena.m4
olena/oln/: Makefile.am  basics.hh  basics1d.hh  basics2d.hh  basics3d.hh  basics_graph.hh  makefile.src
olena/tests/: Makefile.am  README
oln/: ChangeLog  ISSUES  Makefile.am  Makefile.in  aclocal.m4  basics.hh  basics1d.hh  configure  configure.ac  oln.m4
oln/arith/: logic.hh  ops.hh
oln/conf/: compilers.def  configure.ac  gen-scripts.sh  oln-config.shin
oln/config/: README  config.hin  oln-local.m4  oln.m4  pconf-inc.in  pconf.hh  system.hh
oln/convert/: basics.hh  bound.hh  colorconv.hh  conversion.hh  force.hh  nrgbhsi.hh  nrgbhsl.hh  (+7 more)
proto-1.0/: COPYING  ChangeLog  Makefile.am  README  bootstrap.sh  configure.ac
scribo/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  configure.gnu  headers.mk  scribo.mk
src/: Makefile.am  Makefile.in  aclocal.m4  basics.hh  basics2d.hh  basics3d.hh  config.hin  configure  configure.ac  oln.m4
swilena/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  run.mk  swilena.prj
tools/: ChangeLog  Makefile.am  configure.ac  mkinstalldirs  scandefs.pl  texinfo.tex
utilities/: Makefile.am  Makefile.in  generate_morpho.sh  mosaic.cc
(+3817 files in other folders)
