## Process this file with Automake to produce Makefile.in -*-Makefile-*-

INCLUDES = -I$(top_srcdir)/src
AM_CXXFLAGS = -Wall -W -DNDEBUG -ftemplate-depth-50 -ansi -pedantic
noinst_PROGRAMS = tour morpholena test-reconstruction
tour_SOURCES = tour.cc
morpholena_SOURCES = morpholena.cc
test_reconstruction_SOURCES = test-reconstruction.cc
